--- a/demo/src/main/res/layout/activity_main.xml
+++ b/demo/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="pl.bclogic.pulsator4droid.sampleapplication.MainActivity">
+    tools:context="pl.bclogic.pulsator4droid.demo.MainActivity">
 
     <LinearLayout
         android:id="@+id/controls_layout"
